--- a/index.html
+++ b/index.html
@@ -356,6 +356,30 @@
                     <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
                         data-category="html">
 
+                        <img src="image/cleaning logo.jpg" class="project-img rounded-lg mb-4" alt="image error">
+
+                        <h3 class="font-semibold text-lg mb-2">CLEANING WEBSITE</h3>
+
+                        <div class="project-overlay rounded-xl">
+                            <p class="text-gray-200 mb-4 px-2">
+                                A modern cleaning website designed to showcase services and connect with customers.
+                            </p>
+                            <div class="flex gap-4">
+                                <a href="https://cleaning-demo-two.vercel.app/" target="_blank" rel="noopener">Live
+                                    Demo</a>
+                                <a href="https://github.com/Aliyank001/cleaning-frontend.git" target="_blank"
+                                    rel="noopener">GitHub</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- SLIDE 1 -->
+                <div class="swiper-slide">
+                    <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
+                        data-category="html">
+
                         <img src="image/clinic logo.jpg" class="project-img rounded-lg mb-4" alt="image error">
 
                         <h3 class="font-semibold text-lg mb-2">CLINIC WEBSITE </h3>
