--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
                         data-category="html">
 
-                        <img src="image/cleaning logo.jpg" class="project-img rounded-lg mb-4" alt="image error">
+                        <img src="image/cleaning.jpg" class="project-img rounded-lg mb-4" alt="image error">
 
                         <h3 class="font-semibold text-lg mb-2">CLEANING WEBSITE</h3>
 
