--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                     </a>
 
                     <!-- View / Download CV -->
-                    <a href="image/Resume.pdf" target="_blank" rel="noopener noreferrer" download
+                    <a href="image/Aaliyan_CV-2.pdf" target="_blank" rel="noopener noreferrer" download
                         class="flex items-center gap-2 bg-transparent border border-white text-white font-semibold px-6 py-3 rounded-full hover:bg-white hover:text-indigo-600 shadow-md hover:shadow-lg transition-all duration-300">
-                        📄 View / Download CV
+                        📄 View / Download Resume
                     </a>
 
                     <!-- Hire Me -->
