--- a/index.html
+++ b/index.html
@@ -332,6 +332,32 @@
                     <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
                         data-category="html">
 
+                        <img src="image/cafe logo.png" class="project-img rounded-lg mb-4" alt="image error">
+
+                        <h3 class="font-semibold text-lg mb-2"> CAFÉ WEBSITE</h3>
+
+                        <div class="project-overlay rounded-xl">
+                            <p class="text-gray-200 mb-4 px-2">
+                                A modern and responsive coffee café website featuring a premium UI, menu sections,
+                                gallery, and contact layout. Built for demo and portfolio showcase.
+                            </p>
+                            <div class="flex gap-4">
+                                <a href="https://cafe-mauve-two.vercel.app/" target="_blank" rel="noopener">Live
+                                    Demo</a>
+                                <a href="https://github.com/Aliyank001/Coffee-frontend.git" target="_blank"
+                                    rel="noopener">GitHub</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+
+                <!-- SLIDE 1 -->
+                <div class="swiper-slide">
+                    <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
+                        data-category="html">
+
                         <img src="image/gym logo 2.jpg" class="project-img rounded-lg mb-4" alt="image error">
 
                         <h3 class="font-semibold text-lg mb-2">GYM WEBSITE</h3>
@@ -350,6 +376,7 @@
 
                     </div>
                 </div>
+                
 
                 <!-- SLIDE 1 -->
                 <div class="swiper-slide">
