--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <meta property="og:description"
         content="Full Stack Web Developer specializing in MERN Stack. Building modern, responsive websites with 100+ satisfied clients." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourwebsite.com" />
-    <meta property="og:image" content="https://yourwebsite.com/image/profile%202.png" />
+    <meta property="og:url" content="https://www.aaliyankhan.me" />
+    <meta property="og:image" content="https://www.aaliyankhan.me/image/profile%202.png" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Aliyan's Portfolio - Full Stack Web Developer" />
     <meta name="twitter:description"
         content="Full Stack Web Developer specializing in MERN Stack. Building modern, responsive websites." />
-    <meta name="twitter:image" content="https://yourwebsite.com/image/profile%202.png" />
+    <meta name="twitter:image" content="https://www.aaliyankhan.me/image/profile%202.png" />
 
     <title>Aliyan's Portfolio - Full Stack Web Developer</title>
 
@@ -412,239 +412,8 @@
 
         <!-- Swiper Container -->
         <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-
-
-                <!-- SLIDE 1 -->
-                <div class="swiper-slide">
-                    <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
-                        data-category="html">
-
-                        <img src="image/cafe logo.png" class="project-img rounded-lg mb-4" alt="Café Website Project"
-                            loading="lazy">
-
-                        <h3 class="font-semibold text-lg mb-2"> CAFÉ WEBSITE</h3>
-
-                        <div class="project-overlay rounded-xl">
-                            <p class="text-gray-200 mb-4 px-2">
-                                A modern and responsive coffee café website featuring a premium UI, menu sections,
-                                gallery, and contact layout. Built for demo and portfolio showcase.
-                            </p>
-                            <div class="flex gap-4">
-                                <a href="https://cafe-mauve-two.vercel.app/" target="_blank" rel="noopener">Live
-                                    Demo</a>
-                                <a href="https://github.com/Aliyank001/Coffee-frontend.git" target="_blank"
-                                    rel="noopener">GitHub</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-
-                <!-- SLIDE 2 -->
-                <div class="swiper-slide">
-                    <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
-                        data-category="html">
-
-                        <img src="image/real state logo.jpg" class="project-img rounded-lg mb-4" alt="Real State Website Project"
-                            loading="lazy">
-
-                        <h3 class="font-semibold text-lg mb-2">REAL STATE WEBSITE</h3>
-
-                        <div class="project-overlay rounded-xl">
-                            <p class="text-gray-200 mb-4 px-2">
-                                A premium real estate demo website built for Gulf countries, focused on luxury UI,
-                                smooth animations, responsive design, and lead-driven user experience for modern
-                                property businesses.
-                            </p>
-                            <div class="flex gap-4">
-                                <a href="https://real-state-sigma-rouge.vercel.app/" target="_blank" rel="noopener">Live
-                                    Demo</a>
-                                <a href="https://github.com/Aliyank001/Real-State-website-frontend-.git" target="_blank"
-                                    rel="noopener">GitHub</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-
-                <!-- SLIDE 3 -->
-                <div class="swiper-slide">
-                    <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
-                        data-category="html">
-
-                        <img src="image/gym logo 2.jpg" class="project-img rounded-lg mb-4" alt="Gym Website Project"
-                            loading="lazy">
-
-                        <h3 class="font-semibold text-lg mb-2">GYM WEBSITE</h3>
-
-                        <div class="project-overlay rounded-xl">
-                            <p class="text-gray-200 mb-4 px-2">
-                                A modern gym website designed to showcase services and connect with customers.
-                            </p>
-                            <div class="flex gap-4">
-                                <a href="https://gym-frontend-navy.vercel.app/" target="_blank" rel="noopener">Live
-                                    Demo</a>
-                                <a href="https://github.com/Aliyank001/gym-website-frontend.git" target="_blank"
-                                    rel="noopener">GitHub</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-
-                <!-- SLIDE 4 -->
-                <div class="swiper-slide">
-                    <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
-                        data-category="html">
-
-                        <img src="image/cleaning.jpg" class="project-img rounded-lg mb-4" alt="Cleaning Website Project"
-                            loading="lazy">
-
-                        <h3 class="font-semibold text-lg mb-2">CLEANING WEBSITE</h3>
-
-                        <div class="project-overlay rounded-xl">
-                            <p class="text-gray-200 mb-4 px-2">
-                                A modern cleaning website designed to showcase services and connect with customers.
-                            </p>
-                            <div class="flex gap-4">
-                                <a href="https://cleaning-demo-two.vercel.app/" target="_blank" rel="noopener">Live
-                                    Demo</a>
-                                <a href="https://github.com/Aliyank001/cleaning-frontend.git" target="_blank"
-                                    rel="noopener">GitHub</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- SLIDE 5 -->
-                <div class="swiper-slide">
-                    <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
-                        data-category="html">
-
-                        <img src="image/clinic logo.jpg" class="project-img rounded-lg mb-4"
-                            alt="Clinic Website Project" loading="lazy">
-
-                        <h3 class="font-semibold text-lg mb-2">CLINIC WEBSITE </h3>
-
-                        <div class="project-overlay rounded-xl">
-                            <p class="text-gray-200 mb-4 px-2">
-                                Our mission is to provide patient-centered care that combines medical expertise with
-                                compassion.
-                            </p>
-                            <div class="flex gap-4">
-                                <a href="https://clinic-frontend-rosy.vercel.app/" target="_blank" rel="noopener">Live
-                                    Demo</a>
-                                <a href="https://github.com/Aliyank001/clinic-website-frontend.git" target="_blank"
-                                    rel="noopener">GitHub</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- SLIDE 6 -->
-                <div class="swiper-slide">
-                    <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
-                        data-category="html">
-
-                        <img src="image/calculator.jpg" class="project-img rounded-lg mb-4"
-                            alt="Calculator Webpage Project" loading="lazy">
-
-                        <h3 class="font-semibold text-lg mb-2">Calculator Webpage</h3>
-
-                        <div class="project-overlay rounded-xl">
-                            <p class="text-gray-200 mb-4 px-2">
-                                A fully functional calculator built using HTML, CSS, and JavaScript.
-                            </p>
-                            <div class="flex gap-4">
-                                <a href="https://calculator-functional.vercel.app/" target="_blank" rel="noopener">Live
-                                    Demo</a>
-                                <a href="https://github.com/Aliyank001/calculator.git" target="_blank"
-                                    rel="noopener">GitHub</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- SLIDE 7 -->
-                <div class="swiper-slide">
-                    <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
-                        data-category="html">
-
-                        <img src="image/pass logo.jpg" class="project-img rounded-lg mb-4"
-                            alt="Password Generator App Project" loading="lazy">
-
-                        <h3 class="font-semibold text-lg mb-2">Password Generator App</h3>
-
-                        <div class="project-overlay rounded-xl">
-                            <p class="text-gray-200 mb-4 px-2">
-                                Creates strong random passwords using length & character options.
-                            </p>
-                            <div class="flex gap-4">
-                                <a href="https://password-generator-pro-theta.vercel.app/" target="_blank"
-                                    rel="noopener">Live Demo</a>
-                                <a href="https://github.com/Aliyank001/password-generator.git" target="_blank"
-                                    rel="noopener">GitHub</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- SLIDE 8 -->
-                <div class="swiper-slide">
-                    <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
-                        data-category="html">
-
-                        <img src="image/cv maker.jpg" class="project-img rounded-lg mb-4" alt="CV Maker App Project"
-                            loading="lazy">
-
-                        <h3 class="font-semibold text-lg mb-2">CV-Maker App</h3>
-
-                        <div class="project-overlay rounded-xl">
-                            <p class="text-gray-200 mb-4 px-2">
-                                Build your professional CV in minutes and land your next interview faster.
-                            </p>
-                            <div class="flex gap-4">
-                                <a href="https://cv-maker-pro-mocha.vercel.app/" target="_blank" rel="noopener">Live
-                                    Demo</a>
-                                <a href="https://github.com/Aliyank001/cv-maker.git" target="_blank"
-                                    rel="noopener">GitHub</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- SLIDE 9 -->
-                <div class="swiper-slide">
-                    <div class="project-card bg-[#1c1c1c] rounded-xl shadow hover:shadow-lg p-4 transition cursor-pointer hover:scale-105"
-                        data-category="html">
-
-                        <img src="image/business_web_banner_30.jpg" class="project-img rounded-lg mb-4"
-                            alt="Business Website Project" loading="lazy">
-
-                        <h3 class="font-semibold text-lg mb-2">BUSINESS WEBSITE</h3>
-
-                        <div class="project-overlay rounded-xl">
-                            <p class="text-gray-200 mb-4 px-2">
-                                A modern business website designed to showcase services and connect with customers.
-                            </p>
-                            <div class="flex gap-4">
-                                <a href="#" target="_blank">Live Demo</a>
-                                <a href="#" target="_blank">GitHub</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
+            <div class="swiper-wrapper" id="projects-container">
+                <!-- Projects will be loaded here from projects.json -->
             </div>
 
             <!-- Next/Prev Buttons -->
@@ -733,173 +502,11 @@
         <p>© 2026 Aliyan. All rights reserved.</p>
     </footer>
 
-    <script>
-        document.querySelectorAll(".project-card").forEach(card => {
-            const img = card.querySelector(".project-img");
-            const desc = card.querySelector(".project-desc");
-
-            let isLocked = false;
-
-            // Click to lock/unlock
-            img.addEventListener("click", () => {
-                isLocked = !isLocked;
-                if (isLocked) {
-                    desc.style.opacity = "1";
-                    img.style.filter = "blur(4px)";
-                } else {
-                    desc.style.opacity = "0";
-                    img.style.filter = "none";
-                }
-            });
-        });
-
-
-        // Page Loader
-        window.addEventListener('load', () => {
-            const loader = document.getElementById('loader');
-            setTimeout(() => {
-                loader.style.opacity = '0';
-                setTimeout(() => {
-                    loader.style.display = 'none';
-                }, 300);
-            }, 500);
-        });
-
-        // Mobile Menu Toggle
-        const menuBtn = document.getElementById('menu-btn');
-        const mobileMenu = document.getElementById('mobile-menu');
-
-        menuBtn.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
-
-        // Auto-close mobile menu when clicking a link
-        const mobileMenuLinks = document.querySelectorAll('#mobile-menu a');
-        mobileMenuLinks.forEach(link => {
-            link.addEventListener('click', () => {
-                mobileMenu.classList.add('hidden');
-            });
-        });
-
-
-        // Added typing effect script
-
-        const texts = ["Web Developer"];
-        let count = 0;
-        let index = 0;
-        let currentText = '';
-        let letter = '';
-
-        (function type() {
-            if (count === texts.length) count = 0;
-            currentText = texts[count];
-            letter = currentText.slice(0, ++index);
-            document.getElementById('typed-text').textContent = letter;
-            if (letter.length === currentText.length) {
-                count++;
-                index = 0;
-                setTimeout(type, 1000); // pause before next word
-            } else {
-                setTimeout(type, 150);
-            }
-        })();
-
-
-        // Added script to scroll to top on logo click
-
-        const logo = document.getElementById("logo");
-        logo.addEventListener("click", () => {
-            window.scrollTo({
-                top: 0,
-                behavior: "smooth"
-            });
-        });
-    </script>
-
+    <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-
-
-        var swiper = new Swiper(".mySwiper", {
-            slidesPerView: 1,
-            spaceBetween: 20,
-            loop: true,
-            grabCursor: true,
-            centeredSlides: false,
-
-            breakpoints: {
-                640: {
-                    slidesPerView: 1,
-                },
-                768: {
-                    slidesPerView: 2,
-                },
-                1024: {
-                    slidesPerView: 3,
-                },
-            },
-
-            navigation: {
-                nextEl: ".swiper-button-next",
-                prevEl: ".swiper-button-prev",
-            },
-
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true,
-                renderBullet: function (index, className) {
-                    const totalSlides = this.slides.length;
-                    const maxDots = 4;
-
-                    if (totalSlides <= maxDots) {
-                        return '<span class="' + className + '"></span>';
-                    }
-
-                    if (index < maxDots) {
-                        return '<span class="' + className + '"></span>';
-                    } else if (index === maxDots) {
-                        const remaining = totalSlides - maxDots;
-                        return '<span class="' + className + ' swiper-pagination-plus">+' + remaining + '</span>';
-                    }
-
-                    return '';
-                },
-            },
-        });
-
-
-        const filterButtons = document.querySelectorAll(".filter-btn");
-        const allSlides = document.querySelectorAll(".swiper-slide");
-
-        filterButtons.forEach(btn => {
-            btn.addEventListener("click", () => {
-
-                // active button color change
-                filterButtons.forEach(b => {
-                    b.classList.remove("bg-yellow-500", "text-black");
-                    b.classList.add("bg-gray-700", "text-white");
-                });
-
-                btn.classList.remove("bg-gray-700", "text-white");
-                btn.classList.add("bg-yellow-500", "text-black");
-
-                const filterValue = btn.getAttribute("data-filter");
-
-                allSlides.forEach(slide => {
-                    const category = slide.querySelector(".project-card").getAttribute("data-category");
-
-                    if (filterValue === "all" || filterValue === category) {
-                        slide.style.display = "block";
-                    } else {
-                        slide.style.display = "none";
-                    }
-                });
-
-                // Swiper ko force update karna zaroori hai warna hide/show detect nahi karega
-                swiper.update();
-            });
-        });
-    </script>
+    
+    <!-- Custom JavaScript -->
+    <script src="script.js"></script>
 </body>
 
 <!--/swiperjs-->
