--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         content="Full Stack Web Developer specializing in MERN Stack. Building modern, responsive websites." />
     <meta name="twitter:image" content="https://www.aaliyankhan.me/image/profile%202.png" />
 
+    <!-- Favicon -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💻</text></svg>">
+
     <title>Aliyan's Portfolio - Full Stack Web Developer</title>
 
     <!-- Tailwind -->
